@@ -35,6 +35,10 @@ Revision history for Data::ObjectDriver
       http://rt.cpan.org/Ticket/Display.html?id=24480
     - Pg *can't* handle REPLACE
       https://rt.cpan.org/Ticket/Display.html?id=38840
+    - Fixed an issue where Pg would look into the wrong sequence if DBI has a
+      'prefix' configured (used in a undocumented TheSchwartz feature)
+      https://rt.cpan.org/Ticket/Display.html?id=41880
+
 
 0.05  2008.02.24
     - Added a new Data::ObjectDriver::ResultSet abstraction for building
